{
  "version": 4,
  "terraform_version": "0.13.3",
  "serial": 18,
  "lineage": "b348f7b1-9b68-a41e-8e6c-4a65eafe6950",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-00adc1216e54922b7",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-232-234-43.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.232.234.43",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "hibora_Igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:338712141415:internet-gateway/igw-0a13b1be13fbdb933",
            "id": "igw-0a13b1be13fbdb933",
            "owner_id": "338712141415",
            "tags": {
              "name": "hibora_Igw_India"
            },
            "vpc_id": "vpc-072028cdb0190e665"
          },
          "dependencies": [
            "aws_vpc.hibora_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "aws_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00adc1216e54922b7",
            "id": "nat-0a87d3b6e5f8534cf",
            "network_interface_id": "eni-06183bc36af9ced99",
            "private_ip": "192.168.16.168",
            "public_ip": "13.232.234.43",
            "subnet_id": "subnet-0e477a358a6777c2e"
          },
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_subnet.public_subnet",
            "aws_vpc.hibora_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "hibora_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0de5ca3c19dc3da7f",
            "owner_id": "338712141415",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a13b1be13fbdb933",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "name": "hibora_publicrt_India"
            },
            "vpc_id": "vpc-072028cdb0190e665"
          },
          "dependencies": [
            "aws_internet_gateway.hibora_Igw",
            "aws_vpc.hibora_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "hibora_pvt_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0699ce1a31cd96b69",
            "owner_id": "338712141415",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a87d3b6e5f8534cf",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "name": "hibora_pvtrt_India"
            },
            "vpc_id": "vpc-072028cdb0190e665"
          },
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_nat_gateway.aws_nat",
            "aws_subnet.public_subnet",
            "aws_vpc.hibora_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_asso_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c4fa0383e83ffc06",
            "route_table_id": "rtb-0de5ca3c19dc3da7f",
            "subnet_id": "subnet-0e477a358a6777c2e"
          },
          "dependencies": [
            "aws_internet_gateway.hibora_Igw",
            "aws_route_table.hibora_public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.hibora_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dbecb67a0759192b",
            "route_table_id": "rtb-0de5ca3c19dc3da7f",
            "subnet_id": "subnet-046552f52b765f2d1"
          },
          "dependencies": [
            "aws_internet_gateway.hibora_Igw",
            "aws_route_table.hibora_public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.hibora_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pvt_asso_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-043a51a86a3bd4a89",
            "route_table_id": "rtb-0699ce1a31cd96b69",
            "subnet_id": "subnet-053e88be75c183ae3"
          },
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_nat_gateway.aws_nat",
            "aws_route_table.hibora_pvt_rt",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.hibora_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a728d874c7900f9f",
            "route_table_id": "rtb-0699ce1a31cd96b69",
            "subnet_id": "subnet-01e3f5d184216a856"
          },
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_nat_gateway.aws_nat",
            "aws_route_table.hibora_pvt_rt",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.hibora_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "borahi_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:338712141415:security-group/sg-04ab3d2bca059ff7b",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-04ab3d2bca059ff7b",
            "ingress": [],
            "name": "terraform-20201106101553449400000001",
            "name_prefix": "",
            "owner_id": "338712141415",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "borahi_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-072028cdb0190e665"
          },
          "dependencies": [
            "aws_vpc.hibora_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-964783173",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-04ab3d2bca059ff7b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.borahi_sg",
            "aws_vpc.hibora_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "outbond_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2282230453",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-04ab3d2bca059ff7b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.borahi_sg",
            "aws_vpc.hibora_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:338712141415:subnet/subnet-053e88be75c183ae3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.16.0/26",
            "id": "subnet-053e88be75c183ae3",
            "map_public_ip_on_launch": false,
            "owner_id": "338712141415",
            "tags": {
              "name": "borahi_test-pvt_subnet.1"
            },
            "vpc_id": "vpc-072028cdb0190e665"
          },
          "dependencies": [
            "aws_vpc.hibora_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:338712141415:subnet/subnet-01e3f5d184216a856",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.16.64/26",
            "id": "subnet-01e3f5d184216a856",
            "map_public_ip_on_launch": false,
            "owner_id": "338712141415",
            "tags": {
              "name": "borahi_test-pvt_subnet.2"
            },
            "vpc_id": "vpc-072028cdb0190e665"
          },
          "dependencies": [
            "aws_vpc.hibora_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:338712141415:subnet/subnet-0e477a358a6777c2e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.16.128/26",
            "id": "subnet-0e477a358a6777c2e",
            "map_public_ip_on_launch": true,
            "owner_id": "338712141415",
            "tags": {
              "name": "borahi_test-public_subnet.1"
            },
            "vpc_id": "vpc-072028cdb0190e665"
          },
          "dependencies": [
            "aws_vpc.hibora_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:338712141415:subnet/subnet-046552f52b765f2d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.16.192/26",
            "id": "subnet-046552f52b765f2d1",
            "map_public_ip_on_launch": true,
            "owner_id": "338712141415",
            "tags": {
              "name": "borahi_test-public_subnet.2"
            },
            "vpc_id": "vpc-072028cdb0190e665"
          },
          "dependencies": [
            "aws_vpc.hibora_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "hibora_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:338712141415:vpc/vpc-072028cdb0190e665",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.16.0/24",
            "default_network_acl_id": "acl-0f562e209f62bf460",
            "default_route_table_id": "rtb-06dd20e5330a41558",
            "default_security_group_id": "sg-00e5a4a2a2a070d88",
            "dhcp_options_id": "dopt-0a886261",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-072028cdb0190e665",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06dd20e5330a41558",
            "owner_id": "338712141415",
            "tags": {
              "name": "hibora_vpc_India"
            }
          }
        }
      ]
    }
  ]
}